# aurora

./: .gitattributes  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: autoeq_index.tsv
app/src/main/cpp/: CMakeLists.txt  aurora_fp.cpp
app/src/main/cpp/chromaprint/: config.h
app/src/main/java/com/aurora/music/: AuroraApplication.kt  MainActivity.kt
app/src/main/java/com/aurora/music/data/: AppContainer.kt  ArtistInfoStore.kt  AudioDecoder.kt  AudioEffectsController.kt  AutoEqController.kt  AutoEqGenerator.kt  AutoEqRepository.kt  BackupManager.kt  Chromaprint.kt  DiscordRpc.kt  DownloadManager.kt  DuplicateFinder.kt  JellyfinBackend.kt  LastfmScrobbler.kt  ListenBrainzScrobbler.kt  LocalBackend.kt  LocalLibrary.kt  LocalStore.kt  LyricsRepository.kt  M3u.kt  MediaBackend.kt  MergedBackend.kt  MockData.kt  MusicRepository.kt  PlayHistoryStore.kt  PodcastModels.kt  QueueStore.kt  RadioModels.kt  ReplayGainScanner.kt  ReplayGainStore.kt  SettingsStore.kt  SmartPlaylists.kt  SonicEngine.kt  SonicFeatures.kt  SonicStore.kt  SpotifyBackend.kt  SquigEqRepository.kt  SubsonicBackend.kt  TagEditor.kt
app/src/main/java/com/aurora/music/model/: Models.kt
app/src/main/java/com/aurora/music/navigation/: Destinations.kt
app/src/main/java/com/aurora/music/playback/: AlarmActivity.kt  AlarmScheduler.kt  AuroraDspProcessor.kt  CastOptionsProvider.kt  ConvolutionProcessor.kt  DspCoeffBuilder.kt  Fft.kt  MonoAudioProcessor.kt  NowPlaying.kt  PlaybackService.kt  TappingAudioSink.kt  VisualizerController.kt  WidgetBridge.kt  YoutubeResolver.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/raw/: equalizer.json  loader.json
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: aurora_widget_info.xml  automotive_app_desc.xml
decent/: NOTICE.md
decent/decent-media3-decoder-flac/: build.gradle.kts  proguard-rules.txt  setup.sh
decent/decent-media3-decoder-flac/src/main/jni/: .gitignore  flac_parser.cc
decent/decent-media3-decoder-flac/src/main/jni/include/: data_source.h  flac_parser.h
decent/decent-usb-audio-driver/: build.gradle.kts
decent/decent-usb-audio-driver/src/main/jni/: CMakeLists.txt  native-audio-engine.cpp  native-audio-engine.h  usb-audio-output.cpp  usb-audio-output.h
decent/decent-usb-audio-driver/src/main/res/xml/: usb_audio_device_filter.xml
decent/decent-usb-audio-wrapper-media3/: build.gradle.kts
gradle/: libs.versions.toml
tools/: proxy.py
(+96 files in other folders)
